--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,33 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/red"
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <LinearLayout
         android:id="@+id/appbarid"
         android:layout_width="match_parent"
         android:layout_height="90dp"
+        android:orientation="horizontal"
+        android:gravity="top"
         android:background="@color/red"
+        android:weightSum="10"
         android:elevation="0dp">
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_weight="1"
+            android:background="@color/red"
+            android:src="@drawable/back_arrow_vct"
+            tools:ignore="SpeakableTextPresentCheck" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Orders"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textAlignment="center"
+            android:layout_weight="8"
+
+            tools:ignore="RtlCompat" />
 
         <ImageButton
-            android:layout_width="62dp"
-            android:layout_height="62dp"
-            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_weight="1"
             android:background="@color/red"
             android:src="@drawable/barcode"
 
             tools:ignore="SpeakableTextPresentCheck" />
 
 
-    </com.google.android.material.appbar.AppBarLayout>
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout_id"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:background="@drawable/curve_toolbar"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/blue"
 
@@ -42,7 +67,7 @@
         android:id="@+id/viewpager_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/curve_toolbar"
+        android:background="@color/white"
         tools:ignore="SpeakableTextPresentCheck">
     </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
